Mon Aug 10 21:15:32 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c: more or less revert to a cleaned up version of
	FindBestMoveInEval, but declare pm a volatile pointer.

Sat Aug  8 20:07:51 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: hint didn't annotate MOVE_DROP

Sat Aug  8 14:42:20 CEST 2009 Christian Anthon <anthon@kiku.dk>

	*  eval.c: clean up the prune evaluation function (FindBestMoveInEval)
	and circumvent a compiler bug causing invalid prune evaluation on
	certain systems using gcc compiler optimization. This is a critical
	function and should be optimized further if possible.

Thu Aug  6 10:44:28 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: destroy pmr_hint on changed dice

Wed Aug  5 18:21:59 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubgmodlule.c: remove inline from DictItemSteal, isn't inlined
	by gcc, and pointless anyway.

Mon Aug  3 23:57:49 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtkgame.c, gtksplash.c, show.c, util.c, util.h: add options
	to specify datadir, pkgdatadir and docdir

Tue Jul 21 11:52:24 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c: add command to turn off output

Thu Jul 16 22:55:06 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* po/da.mo, progress.c: port rollout stat page to gtk_tree_view

Thu Jul  9 21:12:42 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: fix a problem with disappearing dice when Previous reaches
	game border and let Next and Previous Marked skip game borders

Tue Jul 07 12:00:00 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Tidy stop button

Tue Jun 30 12:00:00 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* neuralnet.c, gnubg.c,eval.c: Simplify SSE, now it's either supported or it isn't

Tue Jun 30 09:10:24 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* po/da.mo, board3d/Makefile.am, po/POTFILES.in, po/cs.po, po/da.po,
	po/de.po, po/en_US.po, po/es.po, po/fr.po, po/gnubg.pot, po/is.po,