@@ -225,7 +225,6 @@ int nConfirmDefault = -1;
 int nThreadPriority = 0;
 int nToolbarStyle = 2;
 unsigned int afCheatRoll[ 2 ] = { 0, 0 };
-unsigned int cAnalysisMoves = 1;
 unsigned int cAutoDoubles = 0;
 unsigned int nBeavers = 3;
 unsigned int nDefaultLength = 7;
@@ -561,7 +560,6 @@ static char szDICE[] = N_("<die> <die>"),
     szOPTDEPTH[] = N_("[depth]"),
     szOPTFILENAME[] = N_("[filename]"),
     szOPTLENGTH[] = N_("[length]"),
-    szOPTLIMIT[] = N_("[limit]"),
     szOPTMODULUSOPTSEED[] = N_("[modulus <modulus>|factors <factor> <factor>] "
 			       "[seed]"),
     szOPTNAME[] = N_("[name]"),
@@ -3030,7 +3028,6 @@ static void SaveAnalysisSettings(FILE * pf)
 	SaveEvalSetupSettings(pf, "set analysis cubedecision", &esAnalysisCube);
 	SaveMoveFilterSettings(pf, "set analysis movefilter", aamfAnalysis);
 	SaveEvalSettings(pf, "set analysis luckanalysis", &ecLuck);
-	fprintf(pf, "set analysis limit %d\n", cAnalysisMoves);
 	fprintf(pf, "set analysis threshold bad %s\n", aszThr[0]);
 	fprintf(pf, "set analysis threshold doubtful %s\n", aszThr[1]);
 	fprintf(pf, "set analysis threshold lucky %s\n", aszThr[2]);
