@@ -1,3 +1,8 @@
+Tue Aug 11 22:45:52 CEST 2009 Christian Anthon <anthon@kiku.dk>
+
+	* analysis.c, backgammon.h, commands.inc, gnubg.c, gtkgame.c, set.c,
+	show.c: Remove set analysis move limit. Didn't do any good.
+
 Mon Aug 10 21:15:32 CEST 2009 Christian Anthon <anthon@kiku.dk>
 
 	* eval.c: more or less revert to a cleaned up version of
